# snapshotter-periphery-blockfetcher

./: .env.example  .gitignore  Dockerfile  README.md  digest.txt  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-ecr.yml
config/: loader.py  preloaders.json  settings.template.json
scripts/: entrypoint.py  generate_preloader_template.py  generate_settings_template.py
utils/: block_fetcher.py  exceptions.py  logging.py  rpc.py
utils/models/: redis_keys.py  settings_model.py
utils/preloaders/: base.py  block_details.py  manager.py
utils/redis/: data_manager.py  redis_conn.py
